--- a/Exercicios/ex022/fundo002.html
+++ b/Exercicios/ex022/fundo002.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalização background</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <h1>Teste de aplicação de background</h1>
+ 
+    <main>
+        <h1>
+            Teste de Imagem
+        </h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, explicabo quos quisquam quod incidunt quas quibusdam eos. Eius aperiam deleniti, tenetur sit sunt voluptate ducimus sint, error id, perspiciatis fugit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique doloremque vel velit dicta. Quam tenetur corporis, cumque, temporibus itaque nam, repellat nihil facere quaerat aperiam cupiditate voluptatem vitae fugit ea?</p>
+    </main>
 </body>
 </html>
